# ros2_lidar_pkgs

gnn_node/: package.xml  setup.cfg  setup.py
gnn_node/config/: model.param.yaml
gnn_node/gnn_node/: gnn_node.py  graph_subscriber_node.py
gnn_node/gnn_node/models/: __init__.py  gnn.py  models.py
lidar_graph_msgs/: CMakeLists.txt  package.xml
lidar_graph_msgs/msg/: GraphData.msg
lidar_pkg_launch/: CMakeLists.txt  package.xml
lidar_pkg_launch/launch/: lidar_gnn.launch.xml
scan2graph/: CMakeLists.txt  package.xml
scan2graph/config/: scan2graph.param.yaml
scan2graph/src/: lidar_graph.cpp
