<?xml version="1.0"?>
<package format="3">
  <name>gnn_node</name>
  <version>0.1.0</version>
  <description>Node to subscribe to GraphData and prepare for GNN processing</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>lidar_graph_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
