<?xml version="1.0"?>
<package format="3">
  <name>lidar_graph_msgs</name>
  <version>0.1.0</version>
  <description>Custom message definitions for LiDAR graph data</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rosidl_default_generators</depend>
  <depend>builtin_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
