<?xml version="1.0"?>
<package format="3">
  <name>ros2_lidar_pkgs</name>
  <version>0.1.0</version>
  <description>LiDAR Graph construction for ROS2</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>lidar_graph_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
